# chronotrail-api-aws

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.kiro/hooks/: test-on-completion.kiro.hook
.kiro/specs/chronotrail-api/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: bfbe8f3086c8_initial_migration_with_all_tables_and_.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  locations.py  media.py  notes.py  photos.py  query.py  usage.py  voice.py
app/aws/: __init__.py  clients.py  embedding.py  exceptions.py  image_processing.py  llm.py  storage.py  transcription.py  utils.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  database.py
app/middleware/: __init__.py  error_handling.py  usage_validation.py
app/models/: __init__.py  database.py  schemas.py
app/repositories/: __init__.py  base.py  location_visits.py  media_files.py  query_sessions.py  text_notes.py
app/services/: auth.py  query.py  query.py.new  usage.py
config/: dev.env  prod.env  staging.env
docs/: error_handling_and_logging.md
infrastructure/: README.md  monitoring.yml
infrastructure/cdk/: app.py  cdk.json
infrastructure/cdk/stacks/: __init__.py  chronotrail_stack.py
scripts/: deploy.sh  init-db.sql  setup-localstack.sh
tests/: conftest.py  test_auth_service.py  test_aws_clients.py  test_aws_clients_extended.py  test_aws_storage.py  test_embedding.py  test_end_to_end_workflows.py  test_error_handling.py  test_image_processing.py  test_integration_endpoints.py  test_jwt_token_management.py  test_llm.py  test_location_visits_endpoints.py  test_location_visits_repository.py  test_main.py  test_media_endpoints.py  test_media_endpoints_simple.py  test_media_files_repository.py  test_media_files_repository_simple.py  test_models_validation.py  test_photos_endpoints.py  test_query_endpoints.py  test_query_processing_service.py  test_query_processing_service_simple.py  test_query_service_basic.py  test_query_service_working.py  test_query_sessions_repository.py  test_query_sessions_repository_sqlite.py  test_repository_base.py  test_repository_sqlite.py  test_simple_repository.py  test_text_notes_endpoints.py  test_text_notes_repository.py  test_text_notes_repository_sqlite.py  test_text_notes_simple.py  test_text_notes_working.py  test_transcription.py  test_usage_endpoints.py  test_usage_integration.py  test_usage_service.py  (+2 more)
